package fr.unice.polytech.biblio.interfaces;
/*
 * Mireille Blay-Fornarino
 */
public interface StudentInterface {
    String getName();
    int getStudentNumber();
    void setName(String name);
    void setStudentNumber(int studentNumber);
}
